# fakechroot

./: NEWS.md  configure.ac
man/: fakechroot.pod
scripts/: Makefile.am  alpine-make-rootfs.env.sh  arch-chroot.env.sh  busybox.fakechroot.sh  chroot.env.sh  chroot.fakechroot.sh  debootstrap.env.sh  dnf.env.sh  ld-linux-x86-64.so.2.fakechroot.sh  ld-musl-x86_64.so.1.fakechroot.sh  pacstrap.env.sh  rinse.env.sh
src/: Makefile.am  __open.c  __opendir2.c  __xstat.c  chdir.c  chroot.c  eaccess.c  execl.c  execle.c  execlp.c  execv.c  execve.c  execvp.c  fchdir.c  fopen64.c  freopen64.c  fts.c  ftw.c  getcwd_real.c  glob64.c  libfakechroot.c  libfakechroot.h  link.c  mkostemp64.c  mkostemps64.c  mkstemp64.c  mkstemps64.c  mount.c  open64.c  openat64.c  posix_spawn.c  realpath.c  rel2abs.c  scandir64.c  setenv.c  statfs64.c  statvfs64.c  strlcpy.h  symlink.c  symlinkat.c  (+2 more)
test/: common.inc.sh
test/t/: zzarchlinux.t  zzdebootstrap.t
